<resources>
    <string name="app_name">Soundary</string>
    <string name="main_not_enough_listen">%1$d초 더 들어 친구의 메시지를 확인해보세요.</string>
    <string name="main_enough_listen">추천이 마음에 드신다면 좋아요를 눌러주세요</string>

    <!-- 공유 페이지 - 노래 선택 -->
    <string name="share_search_music_hint">검색할 노래를 입력해 주세요.</string>
    <string name="share_music_top">어떤 노래를 공유할까요?</string>
    <string name="share_sort_share">많은 사용자들이 공유한 노래</string>
    <string name="share_sort_like">많은 사용자들이 좋아한 노래</string>
    <string name="share_music_name">스토커</string>
    <string name="share_singer_name">10cm</string>
    <string name="share_sort_count">1000명이 공유함</string>

    <!-- 공유 페이지 - 친구 선택 -->
    <string name="share_friend_top">누구에게 공유할까요?</string>
    <string name="share_friend_q1">공유할 친구를 선택해 주세요.</string>
    <string name="share_friend_q2">코멘트를 남겨주세요. (최대 30자)</string>
    <string name="share_comment_hint">코멘트 디폴트값</string>
    <string name="share_button_text">n명에게 보내기</string>
    <string name="share_user_name">쿠키즈</string>
    <string name="share_user_name_first_word">쿠</string>

    <!-- 바텀 시트 -->
    <string name="search_friend_hint">검색할 친구를 입력해 주세요.</string>
    <string name="select_all_friend">전체 선택</string>

    <!-- ImageView에 쓰이는 contentDescription -->
    <string name="share_back_button">backButton</string>
    <string name="share_album_image">albumImage</string>
    <string name="share_friend_image">friendImage</string>
    <string name="share_add_friend">addFriend</string>

    <!-- 위젯 화면 관련 텍스트 -->
    <string name="widget_label_text">콘</string>  <!-- 위젯 텍스트 (콘) -->

    <!--sign intro-->
    <string name="sign_intro_start">카카오톡으로 시작하기</string>

    <!-- signup -->
    <string name="signup_necessary_info">필수 정보를 입력해주세요.</string>
    <string name="signup_nick_intro_info">앱의 고유 아이디는 카카오 아이디의 앞 부분입니다.</string>
    <string name="signup_ID_hint">아이디를 입력하세요</string>
    <string name="signup_nickname_hint">앱에서 사용할 닉네임 (최대 8자)</string>  <!-- 닉네임 입력 힌트 -->
    <string name="signup_category_title">카테고리 설정하기 (1~3개)</string>  <!-- 카테고리 설정 텍스트 -->
    <string name="signup_terms_agreement">서비스 이용 약관에 동의합니다.</string>  <!-- 약관 동의 텍스트 -->
    <string name="signup_privacy_agreement">개인정보 수집 이용에 동의합니다.</string>  <!-- 개인정보 동의 텍스트 -->
    <string name="signup_continue_button">계속 가입하기</string>
    <string name="signup_button">가입하기</string>

    <!--signup2-->
    <string name="signup_pick_profile_imageview">본인 프로필 사진 고르기</string>
    <string name="signup_introduce_hint">한 줄 소개를 작성해주세요.</string>

    <!--mypage-->
    <string name="mypage_name">김냠냠</string>
    <string name="mypage_email">nammynam@naver.com</string>
    <string name="mypage_introduce">한 줄 소개글</string>
    <string name="mypage_share_song">내가 공유한 노래</string>
    <string name="mypage_out">탈퇴하기</string>
    <string name="mypage_edit_info">회원정보수정</string>
    <string name="mypage_nickname">닉네임</string>
    <string name="mypage_ID">아이디</string>
    <string name="mypage_save">저장하기</string>


    <!--category-->
    <string name="mypage_category_setting">카테고리 설정</string>
    <string name="category_hiphop">힙합</string>
    <string name="category_rock">Rock</string>
    <string name="category_pop">POP</string>
    <string name="category_jpop">JPOP</string>
    <string name="category_ballad">발라드</string>
    <string name="category_dance">댄스</string>
    <string name="category_rnb">RnB</string>

    <!--profile-->
    <string name="user_name">쿠키즈</string>
    <string name="user_id">\@kookoo</string>
    <string name="user_email">\kookoo@naver.com</string>

    <string name="state_message">안녕? 나 쿠키즈!</string>

    <string name="category">선호 카테고리</string>
    <string name="genre_pop">POP</string>
    <string name="genre_ballad">발라드</string>
    <string name="genre_hiphop">힙합</string>
    <string name="genre_rock">Rock</string>
    <string name="genre_Jpop">JPOP</string>

    <string name="add_friend">친구 추가</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

