<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/padding_normal">

    <!-- 프로필 이미지 - CardView로 감쌈 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_cardview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/profile_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/all_profile_placeholder"
            android:contentDescription="@string/share_album_image" />
    </androidx.cardview.widget.CardView>

    <!-- 한줄 소개 수정 -->
    <EditText
        android:id="@+id/profile_intro_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/signup_introduce_hint"
        android:text="@string/mypage_introduce"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/profile_cardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 카테고리 설정 -->
    <TextView
        android:id="@+id/category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mypage_category_setting"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/profile_intro_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- GridLayout 추가 -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/category_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/category_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:columnCount="3">

        <!-- 카테고리 버튼들 -->
        <Button
            style="@style/CategoryButton"
            android:text="@string/category_hiphop"
            android:id="@+id/button_hiphop" />

        <Button
            style="@style/CategoryButton"
            android:text="@string/category_rock"
            android:id="@+id/button_rock" />

        <Button
            style="@style/CategoryButton"
            android:text="@string/category_pop"
            android:id="@+id/button_pop" />

        <Button
            style="@style/CategoryButton"
            android:text="@string/category_jpop"
            android:id="@+id/button_jpop" />

        <Button
            style="@style/CategoryButton"
            android:text="@string/category_ballad"
            android:id="@+id/button_ballad" />

        <Button
            style="@style/CategoryButton"
            android:text="@string/category_dance"
            android:id="@+id/button_dance" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
