<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shareBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="430dp"
    android:background="@drawable/bottom_sheet_background"
    android:padding="25dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@null"
        android:src="@drawable/all_icon_search"
        app:layout_constraintBottom_toBottomOf="@+id/share_search_edittext"
        app:layout_constraintEnd_toEndOf="@+id/share_search_edittext"
        app:layout_constraintTop_toTopOf="@+id/share_search_edittext" />

    <EditText
        android:id="@+id/share_search_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/search_friend_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/category_list"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintTop_toBottomOf="@id/share_search_edittext">

        <TextView
            style="@style/bottomSheetCategory"
            android:text="@string/category_rnb" />

        <TextView
            style="@style/bottomSheetCategory"
            android:text="@string/category_hiphop" />

        <TextView
            style="@style/bottomSheetCategory"
            android:text="@string/category_pop" />

        <TextView
            style="@style/bottomSheetCategory"
            android:text="@string/category_rock" />

        <TextView
            style="@style/bottomSheetCategory"
            android:text="@string/category_jpop" />

        <TextView
            style="@style/bottomSheetCategory"
            android:text="@string/category_dance" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_friend_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/share_comment_edittext"
        app:layout_constraintEnd_toEndOf="@id/share_search_edittext"
        app:layout_constraintStart_toStartOf="@id/share_search_edittext"
        app:layout_constraintTop_toBottomOf="@id/category_list"
        app:spanCount="4"
        tools:itemCount="11"
        tools:listitem="@layout/share_friend_item" />

    <EditText
        android:id="@+id/share_comment_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:hint="@string/share_friend_q2"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/send_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_friend_recyclerview" />

    <CheckBox
        android:id="@+id/share_select_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_all_friend"
        app:layout_constraintBottom_toBottomOf="@+id/send_button"
        app:layout_constraintEnd_toStartOf="@id/send_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_button" />

    <TextView
        android:id="@+id/send_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/share_button_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/share_select_all_button"
        app:layout_constraintTop_toBottomOf="@id/share_comment_edittext" />

</androidx.constraintlayout.widget.ConstraintLayout>